creating entity, controller, service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.url=jdbc:postgresql://localhost/postgresDB
+spring.datasource.username=project_gradle
+spring.datasource.password=gradlePassword
+spring.datasource.driver-class-name=org.postgresql.Driver
 
+# This will create table automatically in your database
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.generate-ddl=true
