update, delete, create methods

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.datasource.password=gradlePassword
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # This will create table automatically in your database
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
