--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.jpa.database=default
+
 spring.datasource.url=jdbc:postgresql://localhost/postgresDB
 spring.datasource.username=project_gradle
 spring.datasource.password=gradlePassword
@@ -6,3 +8,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # This will create table automatically in your database
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
+
+#Configurations for mongoDB
+spring.data.mongodb.uri=mongodb+srv://user1:WQtjHZg1R2zh4NaW@cluster0.5r9djsq.mongodb.net/?retryWrites=true&w=majority
+spring.data.mongodb.database=usersDB
