--- a/build.gradle
+++ b/build.gradle
@@ -23,9 +23,17 @@ dependencies {
 	// https://mvnrepository.com/artifact/org.springframework.data/spring-data-mongodb
 	implementation 'org.springframework.data:spring-data-mongodb:4.1.4'
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+	// https://mvnrepository.com/artifact/org.testng/testng
+	testImplementation 'org.testng:testng:7.8.0'
+	// https://mvnrepository.com/artifact/io.rest-assured/rest-assured
+	testImplementation 'io.rest-assured:rest-assured:5.3.2'
+
+
 
 }
 
 tasks.named('test') {
-	useJUnitPlatform()
+	useTestNG(){
+		suites 'src/test/resources/testng.xml'
+	}
 }
