Liquibase and PostConstruct class

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.jpa.generate-ddl=true
 #Configurations for mongoDB
 spring.data.mongodb.uri=mongodb+srv://user1:WQtjHZg1R2zh4NaW@cluster0.5r9djsq.mongodb.net/?retryWrites=true&w=majority
 spring.data.mongodb.database=usersDB
+
+spring.liquibase.enabled=false
