--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,9 @@ dependencies {
 	testImplementation 'org.testng:testng:7.8.0'
 	// https://mvnrepository.com/artifact/io.rest-assured/rest-assured
 	testImplementation 'io.rest-assured:rest-assured:5.3.2'
+	// https://mvnrepository.com/artifact/org.liquibase/liquibase-core
+	implementation 'org.liquibase:liquibase-core:4.24.0'
+
 
 
 
