--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.jpa.database=default
 
-spring.datasource.url=jdbc:postgresql://localhost/postgresDB
-spring.datasource.username=project_gradle
-spring.datasource.password=gradlePassword
+spring.datasource.url=#########
+spring.datasource.username=#####
+spring.datasource.password=#####
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # This will create table automatically in your database
@@ -10,7 +10,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 
 #Configurations for mongoDB
-spring.data.mongodb.uri=mongodb+srv://user1:WQtjHZg1R2zh4NaW@cluster0.5r9djsq.mongodb.net/?retryWrites=true&w=majority
-spring.data.mongodb.database=usersDB
+spring.data.mongodb.uri=###########
+spring.data.mongodb.database=######
 
 spring.liquibase.enabled=false
